# todoist

./: .gitignore  pyproject.toml  requirements.txt  setup.py
tests/: test_projects.py  test_tasks.py  test_todoist.py
todoist/: __init__.py  create_gui.py  create_tasks.py  get_project.py  main.py  main.spec  projects.py  systray.py  tasks.py
