[tool.poetry]
name = "todoist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
PyAutoGUI = "^0.9.53"
PyQt5 = "^5.15.6"
todoist-api-python = "^1.1.1"
keyboard = "^0.13.5"
infi = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
